cálculo da variância

--- a/notebook/curso-de-estatistica-parte-1.ipynb
+++ b/notebook/curso-de-estatistica-parte-1.ipynb
@@ -4586,9 +4586,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.5510204081632648"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "desvio_medio_absoluto = notas_fulano['Fulano'].mad()\n",
     "desvio_medio_absoluto"
@@ -4643,7 +4654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -4653,12 +4664,112 @@
     "id": "4tlbCQeujQNZ",
     "outputId": "21e4a6b5-8a87-4338-8f94-b02ef2ea9e07"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Matérias</th>\n",
+       "      <th>Fulano</th>\n",
+       "      <th>Desvio</th>\n",
+       "      <th>|Desvio|</th>\n",
+       "      <th>(Desvio)^2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Matemática</th>\n",
+       "      <td>8</td>\n",
+       "      <td>0.285714</td>\n",
+       "      <td>0.285714</td>\n",
+       "      <td>0.081633</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Português</th>\n",
+       "      <td>10</td>\n",
+       "      <td>2.285714</td>\n",
+       "      <td>2.285714</td>\n",
+       "      <td>5.224490</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Inglês</th>\n",
+       "      <td>4</td>\n",
+       "      <td>-3.714286</td>\n",
+       "      <td>3.714286</td>\n",
+       "      <td>13.795918</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Geografia</th>\n",
+       "      <td>8</td>\n",
+       "      <td>0.285714</td>\n",
+       "      <td>0.285714</td>\n",
+       "      <td>0.081633</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>História</th>\n",
+       "      <td>6</td>\n",
+       "      <td>-1.714286</td>\n",
+       "      <td>1.714286</td>\n",
+       "      <td>2.938776</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Física</th>\n",
+       "      <td>10</td>\n",
+       "      <td>2.285714</td>\n",
+       "      <td>2.285714</td>\n",
+       "      <td>5.224490</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Química</th>\n",
+       "      <td>8</td>\n",
+       "      <td>0.285714</td>\n",
+       "      <td>0.285714</td>\n",
+       "      <td>0.081633</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Matérias    Fulano    Desvio  |Desvio|  (Desvio)^2\n",
+       "Matemática       8  0.285714  0.285714    0.081633\n",
+       "Português       10  2.285714  2.285714    5.224490\n",
+       "Inglês           4 -3.714286  3.714286   13.795918\n",
+       "Geografia        8  0.285714  0.285714    0.081633\n",
+       "História         6 -1.714286  1.714286    2.938776\n",
+       "Física          10  2.285714  2.285714    5.224490\n",
+       "Química          8  0.285714  0.285714    0.081633"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "notas_fulano['(Desvio)^2'] = notas_fulano['Desvio'].pow(2)\n",
+    "notas_fulano"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -4668,12 +4779,25 @@
     "id": "oCcAfoIOjQNa",
     "outputId": "e55249a4-6d91-4776-d89f-428f067a87ae"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.57142857142857"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "notas_fulano['(Desvio)^2'].sum() / (len(notas_fulano) - 1)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -4683,8 +4807,22 @@
     "id": "EyrfPHLtjQNb",
     "outputId": "a024839f-1c4a-4a91-b892-3966d7cc8f95"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.57142857142857"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "variancia = notas_fulano['Fulano'].var()\n",
+    "variancia"
+   ]
   },
   {
    "cell_type": "markdown",
