cálculo do desvio padrão

--- a/notebook/curso-de-estatistica-parte-1.ipynb
+++ b/notebook/curso-de-estatistica-parte-1.ipynb
@@ -4863,7 +4863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -4873,12 +4873,25 @@
     "id": "2di6iLFaSPda",
     "outputId": "d4b3d928-0ef9-4412-8b97-a16724770f84"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.1380899352993947"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sqrt(variancia)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -4888,12 +4901,26 @@
     "id": "BMTx9yKHSPON",
     "outputId": "2a045e01-b0a6-4c42-96e8-18708617687d"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.1380899352993947"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "desvio_padrao = notas_fulano['Fulano'].std()\n",
+    "desvio_padrao"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -4903,12 +4930,103 @@
     "id": "_PeQtqbdjQNh",
     "outputId": "dd38bbe1-9fbc-4be6-85a5-8e481520bf85"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Matérias</th>\n",
+       "      <th>Beltrano</th>\n",
+       "      <th>Fulano</th>\n",
+       "      <th>Sicrano</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Matemática</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>7.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Português</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Inglês</th>\n",
+       "      <td>0.5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>7.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Geografia</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>História</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Física</th>\n",
+       "      <td>9.5</td>\n",
+       "      <td>10</td>\n",
+       "      <td>8.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Química</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>7.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Matérias    Beltrano  Fulano  Sicrano\n",
+       "Matemática      10.0       8      7.5\n",
+       "Português        2.0      10      8.0\n",
+       "Inglês           0.5       4      7.0\n",
+       "Geografia        1.0       8      8.0\n",
+       "História         3.0       6      8.0\n",
+       "Física           9.5      10      8.5\n",
+       "Química         10.0       8      7.0"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -4918,12 +5036,29 @@
     "id": "5LYOKy25jQNi",
     "outputId": "c263cc75-8407-4546-ef00-64a6abd9a6a7"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Matérias\n",
+       "Beltrano    5.142857\n",
+       "Fulano      7.714286\n",
+       "Sicrano     7.714286\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.mean()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -4933,12 +5068,29 @@
     "id": "FfcyfSkFjQNj",
     "outputId": "ccdf8bc6-4e1c-4845-b6b7-bb5ae85fe25f"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Matérias\n",
+       "Beltrano    3.0\n",
+       "Fulano      8.0\n",
+       "Sicrano     8.0\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.median()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -4948,12 +5100,61 @@
     "id": "G8vorygCjQNk",
     "outputId": "39af6a22-deed-47eb-eeee-17e48ccf9a7f"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Matérias</th>\n",
+       "      <th>Beltrano</th>\n",
+       "      <th>Fulano</th>\n",
+       "      <th>Sicrano</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Matérias  Beltrano  Fulano  Sicrano\n",
+       "0             10.0       8      8.0"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.mode()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -4963,19 +5164,25 @@
     "id": "01op3BEvjQNl",
     "outputId": "5b427605-ac79-4071-8b6f-4eee089337a0"
    },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "aiUvZluhUx-0"
-   },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Matérias\n",
+       "Beltrano    4.460141\n",
+       "Fulano      2.138090\n",
+       "Sicrano     0.566947\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.std()"
+   ]
   }
  ],
  "metadata": {
