--- a/notebook/exercicios.ipynb
+++ b/notebook/exercicios.ipynb
@@ -364,6 +364,91 @@
    "source": [
     "print(f'O aluno com maior dispersão é Fulano. Seu desvio médio absoluto foi de {desvio_medio_absoluto_fulano}')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## Calculando o desvio padrão #1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = pd.DataFrame({\n",
+    "    'Sexo': ['H', 'M', 'M', 'M', 'M', 'H', 'H', 'H', 'M', 'M'],\n",
+    "    'Idade': [53, 72, 54, 27, 30, 40, 58, 32, 44, 51]\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14.184890239656813"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "desvio_padrao = dataset.Idade.std()\n",
+    "desvio_padrao"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Calculando o desvio padrão #2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = pd.DataFrame({\n",
+    "    'Sexo': ['H', 'M', 'M', 'M', 'M', 'H', 'H', 'H', 'M', 'M'],\n",
+    "    'Idade': [53, 72, 54, 27, 30, 40, 58, 32, 44, 51]\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Idade    16.64532\n",
+       "Name: M, dtype: float64"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "desvio_padrao_mulheres = dataset.groupby(['Sexo']).std().loc['M']\n",
+    "desvio_padrao_mulheres"
+   ]
   }
  ],
  "metadata": {
